# sample_flow

./: .gitignore  .pre-commit-config.yaml  README.md  README_DEPLOYMENT.md  README_DEV.md  codecov.yml  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  publish.yml
assets/: AdminView.6d9ae57f.js  LoginView.84a62617.js  SamplesView.0aa39cf8.js  index.137fa811.js  index.3dbb0bca.css
backend/: Dockerfile  LICENSE.md  README.md  pyproject.toml
backend/circuit_seq_server/: __init__.py  __main__.py  _version.py
backend/doc/: api.rst  conf.py  index.rst
backend/src/circuit_seq_server/: __init__.py  app.py  date_utils.py  logger.py  main.py  model.py  primary_key.py  utils.py
backend/src/sample_flow_server/: __init__.py  app.py  main.py  model.py  utils.py
backend/tests/: conftest.py  test_app.py  test_circuit_seq_server.py  test_date_utils.py  test_model.py  test_primary_key.py  test_utils.py
backend/tests/data/sequences/: BlueScribe.dna  linear.dna
backend/tests/helpers/: flask_test_utils.py
frontend/: .env  .eslintrc.cjs  Dockerfile  README.md  cypress.config.ts  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.vitest.json  vite.config.ts
frontend/src/: App.vue  api-client.ts  types.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: AccountComponent.vue  BarCode.vue  ListItem.vue  LoginComponent.vue  ResetComponent.vue  SamplesTable.vue  SignupComponent.vue  TitleComponent.vue
frontend/src/components/__tests__/: HelloWorld.spec.ts
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/utils/: api-client.ts  types.ts  validation.ts
frontend/src/utils/__tests__/: validation.spec.ts
frontend/src/views/: AboutView.vue  ActivateView.vue  AdminView.vue  LoginView.vue  ResetPasswordView.vue  SamplesView.vue
frontend/tests/e2e/: home.cy.ts  support.ts
notebooks/: api_examples.ipynb
src/: App.vue  types.ts
src/assets/: base.css  main.css
src/components/: ListItem.vue  Main.vue  Title.vue  TitleComponent.vue
src/components/__tests__/: HelloWorld.spec.ts
src/components/icons/: IconBook.vue  IconChat.vue  IconData.vue  IconInfo.vue  IconLightbulb.vue  IconPerson.vue  IconPlus.vue  IconQuestion.vue
src/router/: index.ts
src/stores/: samples.ts  user.ts
src/views/: AboutView.vue  AdminView.vue  HomeView.vue  LoginView.vue  SamplesView.vue
