# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "setuptools >=61",
    "setuptools_scm >=7",
]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for circuit_seq_server's version
[project]
name = "circuit_seq_server"
description = "Add short description here"
readme = "README.md"
maintainers = [
    { name = "Liam Keegan", email = "ssc@iwr.uni-heidelberg.de" },
]
dynamic = ["version"]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["flask", "flask-cors", "flask-jwt-extended", "flask-sqlalchemy", "argon2-cffi", "click"]

[project.scripts]
circuit_seq_server = "circuit_seq_server.__main__:main"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
]
docs = [
    "m2r2",
    "sphinx",
    "sphinx_rtd_theme",
]


# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = [
    "circuit_seq_server",
]

# Configure setuptools_scm, which extracts the version number from
# the version control system. For more information see its documentation:
# https://github.com/pypa/setuptools_scm
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "circuit_seq_server/_version.py"

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
